--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+  <script>window.process = { env: {}, platform: "browser", version: "", cwd: function() { return "/"; }, stdout: {}, stderr: {} };</script>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
